--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,13 @@
             "email": "jhonattasantoss@hotmail.com"
         }
     ],
-    "require": {}
+    "require": {},
+    "require-dev": {
+        "phpunit/phpunit": "^6"
+    },
+    "autoload": {
+        "psr-4": {
+            "StarCorp\\": "src"
+        }
+    }
 }
